# pyfujitseu

./: .pre-commit-config.yaml  mypy.ini  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
pyfujitsugeneral/: client.py  splitAC.py
