[metadata]
name = my_package
description_file = README.md
version = attr: my_package.VERSION
author = Josiah Carberry
author_email = josiah_carberry@brown.edu
description="Python Library for interacting with Fujitsu General split air conditioners API",
long_description="Python Library for interacting with Fujitsu General split air conditioners API",
keywords = Fujitsu General air conditioners
license = MIT License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.12
